<resources>
    <string name="app_name">ReVive Smart Home</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="back">Back</string>
    <string name="timer">Timer</string>
    <string name="loop">Loop Timer</string>
    <string name="addDevice">add new device</string>
    <string name="defaultStr">default</string>
    <string name="host">host</string>
    <string name="deviceName">device name</string>
    <string name="deviceType">device type</string>
    <string name="deviceList">device list</string>
    <string name="choose_device_type">Choose Device Type</string>
    <string name="deviceTypeROneVOne">ROneVOne</string>
    <string name="backToDeviceList">Back to device list</string>
    <string name="home">Home</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_device">Delete Device</string>
    <string name="Home_Fragment_Tag">HOME_FRAGMENT</string>
    <string name="Devices_Fragment_Tag">DEVICES_FRAGMENT</string>
    <string name="save_file_name">example.txt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_device_list">Clear Device List</string>
    <string name="how_to_use">ReVive Smart Home</string>
    <string name="cloud">Start cloud version</string>
    <string name="local">Start local version</string>
    <string name="coming_soon">Coming soon</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="backToStartMenu">Back to start menu</string>
    <string name="profile">Profile</string>
    <string name="log_out">LOG OUT</string>
    <string name="wifi_ssid">Enter WiFi SSID</string>
    <string name="wifi_password">Enter WiFi Password</string>
    <string name="bluetooth_devices_list">Bluetooth devices list</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="humidity">Humidity:</string>
    <string name="temperature">Temperature:</string>
    <string name="register_now">Register Now!</string>
    <string name="don_t_have_an_account">Don\'t have an account?    </string>
    <string name="voice_control">Voice Control</string>
    <string name="devices_list">Devices List</string>
    <string name="menu">Menu</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="devices_list_is_empty_n_try_to_create_new_device">Devices list is empty \n Try to create new device</string>
    <string name="try_again">Try Again</string>
    <string name="there_appears_to_be_trouble_with_your_network_connection">There appears to be trouble with your network connection</string>
    <string name="whoops">Whoops!</string>
    <string name="analytics">analytics</string>
    <string name="please_verify_your_mail">Please verify your mail</string>
    <string name="go_to_login">Go to login</string>
    <string name="blank">blank</string>
    <string name="history">history</string>

    <string name="ROneVOne">ROneVOne</string>
    <string name="select_time">Select Time</string>
    <string name="create">Create</string>
    <string name="enter_frequency_in_hours">Enter frequency in hours</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>

    <string-array name="devices">
        <item>ROneVOne</item>
        <item>CROne</item>
        <item>CurVOne</item>
        <item>DOne</item>
    </string-array>

    <string-array name="r_one_v_one_commands">
        <item>On</item>
        <item>Off</item>
    </string-array>

    <string-array name="cur_v_one_commands">
        <item>Open</item>
        <item>Close</item>
    </string-array>


</resources>