<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/backToMainActivity"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_arrow_back_ios_new_24"
        android:title="@string/back"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/timer"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/timer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/loopTimer"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_loop_24"
        android:title="@string/loop"
        app:showAsAction="ifRoom"
        />

</menu>