<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".components.DOne.DOneTimer">

    <Spinner
        android:id="@+id/spinner_timer_d_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@android:drawable/btn_dropdown"
        android:backgroundTint="?attr/colorPrimary"
        android:elevation="2dp"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/select_time_d_one"
        tools:layout_editor_absoluteX="32dp" />


    <CheckBox
        android:id="@+id/check_box_frequency_d_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/loop"
        android:theme="@style/CustomTimePicker"
        app:buttonTint="@color/gray_400"
        app:layout_constraintTop_toBottomOf="@+id/spinner_timer_d_one" />

    <Button
        android:id="@+id/select_time_d_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:textColor="@color/text_color_light"
        android:text="@string/select_time"
        android:drawableEnd="@drawable/shape_login_button"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/enter_timer_frequency_d_one"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:elevation="2dp"
        android:hint="@string/enter_frequency_in_hours"
        android:textColorHint="?attr/colorOnTertiary"
        app:boxBackgroundColor="?attr/colorPrimary"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="?attr/colorPrimary"
        app:hintTextColor="?attr/colorOnTertiary"
        app:layout_constraintTop_toBottomOf="@+id/check_box_frequency_d_one">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_timer_frequency_d_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:textColorHint="?attr/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/create_timer_d_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/shape_login_button"
        android:gravity="center"
        android:minHeight="40dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/d_one_slider_timer_frequency" />

    <com.google.android.material.slider.Slider
        android:id="@+id/d_one_slider_timer_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:layout_constraintTop_toBottomOf="@+id/enter_timer_frequency_d_one"
        app:tickColorInactive="@color/gray_400"
        app:trackColor="@color/orange"
        app:trackColorInactive="@color/gray_400" />




    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">





        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="bottom"
            android:backgroundTint="?attr/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/back_timer_d_one"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical"
                    android:text="@string/back"
                    android:textColor="?attr/colorOnTertiary"
                    app:drawableTopCompat="@drawable/ic_baseline_arrow_back_ios_new_24"/>

                <TextView
                    android:id="@+id/device_list_timer_d_one"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical"
                    android:text="@string/deviceList"
                    android:textColor="?attr/colorOnTertiary"
                    app:drawableTopCompat="@drawable/ic_baseline_format_list_bulleted_24"/>






            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>