<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateDeviceActivity"
    android:gravity="center_horizontal"
    android:background="?attr/colorOnPrimary">


    <Spinner
        android:id="@+id/spinner1"
        android:backgroundTint="?attr/colorPrimary"
        android:layout_margin="32dp"

        android:layout_width="match_parent"
        android:elevation="2dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/host"
        android:textColorHint="?attr/colorOnTertiary"
        app:hintTextColor="?attr/colorOnTertiary"
        android:elevation="2dp"
        app:boxBackgroundColor="?attr/colorPrimary"
        app:boxStrokeColor="?attr/colorPrimary"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hostEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?attr/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout


        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/deviceName"
        android:layout_weight="50"
        app:hintTextColor="?attr/colorOnTertiary"
        android:textColorHint="?attr/colorOnTertiary"
        app:boxBackgroundColor="?attr/colorPrimary"
        app:boxStrokeColor="?attr/colorPrimary"
        android:elevation="2dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:background="@drawable/shape_background_button_on_off"
        android:id="@+id/addDeviceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:textColor="?attr/colorOnTertiary"
        android:layout_marginBottom="10dp"
        android:text="@string/addDevice" />

    <TextView
        android:id="@+id/backToDeviceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backToDeviceList"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:textColor="?attr/colorOnTertiary"/>



</LinearLayout>