<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".components.CROne.CROneActivity">


    <com.larswerkman.holocolorpicker.ColorPicker
        android:id="@+id/picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CROneMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/picker"
        app:layout_constraintEnd_toEndOf="@+id/picker"
        app:layout_constraintStart_toStartOf="@+id/picker"
        app:layout_constraintTop_toTopOf="@+id/picker" />


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsROneVOne"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_anchor="@id/bar"
        tools:ignore="SpeakableTextPresentCheck"
        android:backgroundTint="@color/orange"
        />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/orange">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/backToMainActivityROneVOne"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_baseline_arrow_back_ios_new_24">

            </TextView>

            <TextView
                android:id="@+id/timerROneVOne"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/timer"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_baseline_timer_24">

            </TextView>

            <TextView
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"

                android:gravity="center"
                android:orientation="vertical"
                android:textColor="#FFFFFF"
                android:visibility="invisible">

            </TextView>

            <TextView
                android:id="@+id/loopTimerROneVOne"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/loop"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_baseline_loop_24">

            </TextView>

            <TextView
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/defaultStr"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_baseline_loop_24">

            </TextView>

        </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>




</androidx.constraintlayout.widget.ConstraintLayout>